--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
-    href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lobster&family=Quicksand:wght@300;500&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lobster&family=Quicksand:wght@300;500;700&display=swap"
     rel="stylesheet">
 
   <title>React App</title>
